--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body>
     <%= render 'layouts/header' %>
       <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
         <%= link_to "sample app",root_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
@@ -26,7 +29,7 @@
     <div class="container">
     <%= yield %>
     <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
     </div>
-
   </body>
 </html>
