--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,7 +156,23 @@ aside {
   input {
     height: auto !important;
   }
-
+  @media (max-width: 800px) {
+    footer {
+      small {
+        display: block;
+        float: none;
+        margin-bottom: 1em;
+      }
+      ul {
+        float: none;
+        padding: 0;
+        li {
+          float: none;
+          margin-left: 0;
+        }
+      }
+    }
+  }
 }
 
 #error_explanation {
@@ -173,3 +189,9 @@ aside {
       color: $state-danger-text;
     }
   }
+
+/* dropdown menu */
+
+.dropdown-menu.active{
+    display:block;
+}
